--- a/web_front/app/views/home/_index.html.erb
+++ b/web_front/app/views/home/_index.html.erb
@@ -8,7 +8,7 @@
 		<%= javascript_include_tag "application" %>
 		<!--<script src="../../assets/javascripts/ajax.js"></script>
 		<script src="../../assets/javascripts/index.js"></script>-->
-		<link rel="icon" href="../../assets/images/favicon.ico">
+		<%= favicon_link_tag 'favicon.ico' %>
 	</head>
 	<body>
 		<div id='bg_home'>
@@ -32,7 +32,37 @@
 				<div id='download_bar'>
 					.
 				</div>
-				<%= render :partial => "login" %>
+				<div id='login_small'>
+					<div id='login_box_title'>
+						Log In or Sign Up
+					</div>
+					<div id='signup_fields'>
+						<div class='land_ff'>
+							Username <input type='text' name='username'></br>
+						</div>
+						<div class='land_ff'>
+							Password <input type='password' name='password'></br>
+						</div>
+						<div class='land_ff'>
+							Confirm Password <input type='password' name='password'></br>
+						</div>
+						<div class='land_ff'>
+							Email <input type='text' name='email'>
+						</div>
+					</div>
+					<div id='login_subtext'>
+						Remember Me <input type="checkbox" name="rememberme" value="remembered"> 
+					</div>
+					<div class='clearfix'></div>
+					<button id='signup_button' type='button'>
+						Sign Up
+					</button>
+					<a href='dashboard'>
+						<button id='login_button' type='submit'>
+							Log In
+						</button>
+					</a>
+				</div>
 			</div>
 			<%= render :partial => "about" %>
 		</div>
