All of them used

--- a/web_front/app/views/home/_index.html.erb
+++ b/web_front/app/views/home/_index.html.erb
@@ -3,7 +3,7 @@
 	<%= stylesheet_link_tag "application" %>
 	<!--<link rel="stylesheet" type="text/css" href="/assets/stylesheets/index.css">-->
 	<head>
-		<title>ShowCam</title> <!--Possibly do a yield title sort of ruby line here-->
+		<title>ShowCam | Home</title> <!--Possibly do a yield title sort of ruby line here-->
 		<meta charset="utf-8" />
 		<%= javascript_include_tag "application" %>
 		<!--<script src="../../assets/javascripts/ajax.js"></script>
