--- a/web_front/app/views/home/_index.html.erb
+++ b/web_front/app/views/home/_index.html.erb
@@ -23,7 +23,7 @@
 			</div>
 			<div id='login_box'>
 				<div id='download_button_border'>
-					<a href='whereeverourclientis.html'>
+					<a href='https://s3-us-west-1.amazonaws.com/showcam.photos/showCam.zip'>
 						<div id='download_button'>
 							Click To Download
 						</div>
@@ -57,7 +57,7 @@
 					<button id='signup_button' type='button'>
 						Sign Up
 					</button>
-						<button id='login_button' type='submit'>
+						<button id='login_button' type='submit' onClick="alert('Temporarily disabled. Sorry :(')">
 							Log In
 						</button>
 				</div>
